# scoutsched

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  charter.md  logo-prompt.md
examples/: README.md  config.toml  sample_matches.json
src/: cli.rs  config.rs  lib.rs  main.rs  model.rs  output.rs  report.rs  sample.rs  tba.rs
src/solver/: breaks.rs  coverage.rs  expertise.rs  fill.rs  mod.rs  repair.rs
tests/: feasibility.rs
